fix: fix default contrast ratio for button (#978)
this gets us up to 100% accessibility score on lighthouse

--- a/src/scss/themes/_base.scss
+++ b/src/scss/themes/_base.scss
@@ -1,11 +1,11 @@
 :root {
   $deemphasized-color: #666;
 
-  --button-primary-bg: #{lighten($main-theme-color, 7%)};
+  --button-primary-bg: #{$main-theme-color};
   --button-primary-text: #{$secondary-text-color};
   --button-primary-border: #{darken($main-theme-color, 30%)};
-  --button-primary-bg-active: #{lighten($main-theme-color, 1%)};
-  --button-primary-bg-hover: #{lighten($main-theme-color, 9%)};
+  --button-primary-bg-active: #{lighten($main-theme-color, 9%)};
+  --button-primary-bg-hover: #{lighten($main-theme-color, 5%)};
 
   --button-bg: #{darken($main-bg-color, 10%)};
   --button-text: #{$main-text-color};
